src/objects/Market_Broker_Association__c.object
<CustomObject>
    <fields>
        <fullName>Active_Broker__c</fullName>
        <formula>Broker__r.Active_Broker__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active Broker?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Broker__c</fullName>
        <label>Broker</label>
        <referenceTo>Broker__c</referenceTo>
        <relationshipLabel>Market - New</relationshipLabel>
        <relationshipName>Market_Broker_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Brokers - New</relationshipLabel>
        <relationshipName>Market_Broker_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary Market</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Market Broker Association</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>Broker__c</columns>
        <columns>Active_Broker__c</columns>
        <columns>Market__c</columns>
        <columns>Priority__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Market Broker Association Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Broker Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>